fixed the horizontal scrolling for mobile

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -6,6 +6,6 @@
   box-sizing: border-box;
 }
 html {
-  font-size: 16px;
+  font-size: 12px;
   font-family: Quicksand, sans-serif;
 }
