--- a/src/styles/components/CurrentWeather.scss
+++ b/src/styles/components/CurrentWeather.scss
@@ -4,7 +4,7 @@ $height: 250px;
   display: flex;
 
   @media screen and (max-width: 745px) {
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
   }
 
@@ -47,7 +47,7 @@ $height: 250px;
     }
 
     .widget {
-      width: 182px;
+      width: 100%;
 
       .widget-container {
         padding: 0.5rem;
