--- a/src/styles/components/Search.scss
+++ b/src/styles/components/Search.scss
@@ -4,11 +4,11 @@
   display: flex;
   border: 1px solid var(--secondary-text-color);
   border-radius: 10px;
-  padding: 0 1rem;
+  padding: 0 0.5rem;
 
   .search-icon,
   .search-input input {
-    height: 35px;
+    height: 2.5rem;
   }
   .search-icon {
     display: flex;
@@ -24,28 +24,32 @@
     border: none;
     outline: none;
     font-size: 1rem;
+    padding-left: 0.5rem;
   }
 }
+
 .search-results {
   border-radius: 0.5rem;
-
   background-color: var(--header-bg-color);
-
   position: absolute;
   z-index: 1;
   top: calc($header-height + 0.25rem);
-
-  width: 50%;
+  left: 5%;
+  width: 90%;
   max-height: 50vh;
+  overflow-y: auto;
 
-  overflow-x: hidden;
+  @media screen and (min-width: 768px) {
+    width: 50%;
+    left: initial;
+  }
 
   .results-container {
     .result {
       padding: 1rem;
       font-size: 1.1rem;
-
       cursor: pointer;
+      transition: background-color 0.3s ease;
 
       &:hover {
         background-color: var(--border-color);
